Parece que se ignora el margen negativo del header con  "overflow: hidden", quizá sea por esto:    https://bugs.chromium.org/p/chromium/issues/detail?id=350473  Al final, quitar el padding derecho del post y poner un  margen derecho del mismo tamaño a los section hijos.

--- a/apps/aoba_web/assets/css/app-no-styles.scss
+++ b/apps/aoba_web/assets/css/app-no-styles.scss
@@ -5,3 +5,4 @@
 
 $lavendar: #eedbff;
 $text-padding: 2px;
+$header-post-padding: 20px;
